src/objects/SFL12_Risk__c.object
<CustomObject>
    <description>Object tracks a Company&apos;s business risks.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Put in a description of the Risk</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact_View__c</fullName>
        <formula>IF((Impact__c/2)&lt;=1,  IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000000iPq2&quot;,&quot;Very Low Impact&quot;),  IF((Impact__c/2)&lt;=2,  IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000000iPq3&quot;, &quot;Low Impact&quot;) ,  IF((Impact__c/2)&lt;=3,  IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000000iPq6&quot;,&quot;Medium Impact&quot;) ,  IF((Impact__c/2)&lt;=4,  IMAGE(&quot;servlet/servlet.FileDownload?file=01570000000iPq4&quot;,&quot;High Impact&quot;) ,  IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000000iPq0&quot;, &quot;Very High Impact&quot;)  ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>A number between 0 and 10.</description>
        <label>Impact</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Management_Actions__c</fullName>
        <label>Management Actions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mitigating_factors__c</fullName>
        <description>Please enter a description of any mitigating factors that reduce the probability or impact</description>
        <inlineHelpText>Please enter a description of any mitigating factors that reduce the probability or impact</inlineHelpText>
        <label>Mitigating factors</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mitigation_Cost__c</fullName>
        <description>How much to make it go away?</description>
        <label>Mitigation Cost</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Probability_View__c</fullName>
        <formula>IF((Probability__c/2)&lt;=1,  IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000000iPq2&quot;,&quot;Very Low Probability&quot;),  IF((Probability__c/2)&lt;=2,  IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000000iPq3&quot;, &quot;Low Probability&quot;) ,  IF((Probability__c/2)&lt;=3,  IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000000iPq6&quot;,&quot;Medium Probability&quot;) ,  IF((Probability__c/2)&lt;=4,  IMAGE(&quot;servlet/servlet.FileDownload?file=01570000000iPq4&quot;,&quot;High Probability&quot;) ,  IMAGE(&quot;/servlet/servlet.FileDownload?file=01570000000iPq0&quot;, &quot;Very High Probability&quot;)  ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <description>A number between 0 and 10, 0 is never, 10 is certain.</description>
        <label>Probability</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>A reference number.</description>
        <displayFormat>RK{000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Residual_Impact__c</fullName>
        <label>Residual Impact</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residual_Risk__c</fullName>
        <description>Please enter the residual risk after mitigating factors have been accounted for</description>
        <inlineHelpText>Please enter the residual risk after mitigating factors have been accounted for</inlineHelpText>
        <label>Residual Risk</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Barometer__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15,  Weighting_Score__c ) &amp; IMAGE(&quot;/s.gif&quot;, &quot;white&quot;, 15, 100 - ( Weighting_Score__c  * 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Barometer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Value__c</fullName>
        <label>Risk Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>People, Processes, Systems and Locations that may be affected by this Risk.</description>
        <label>Scope</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000023TX8EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weighting_Score__c</fullName>
        <formula>Impact__c  *  Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighting Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Risk</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Reference__c</columns>
        <columns>NAME</columns>
        <columns>Impact__c</columns>
        <columns>Probability__c</columns>
        <columns>Risk_Value__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Risk Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>